<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="businessname">u d a c i t y</string>
    <string name="address">2465 Latham St, Mountain View, CA 94043</string>
    <string name="phone">650-555-5555</string>
    <string name="website">www.udacity.com</string>
    <string name="textone"> // c h a n g e</string>
    <string name="texttwo">// y o u r</string>
    <string name="textthree">f u t u r e</string>
</resources>
